change to outerdot.com

--- a/about/index.html
+++ b/about/index.html
@@ -1,21 +1,52 @@
 ---
 layout: page
-title: "About"
-description: ""
+title: About
+description: "Some details about me"
+#tagline: a blog about code
+group: navigation
 ---
 {% include JB/setup %}
 
 
-<h3>About me</h3>
+<h4>Who am I</h4>
 
 <p>I'm a software engineer who loves to code and build things, experiment with new technologies, and always deepen my learning with existing ones.</p>
 
-<h3>Why blog?</h3>
+<h4>Why blog?</h4>
 <p>People (friends colleagues and wife) were tired of me talking about technology all the time, I decided to direct this into a blog, and here is the result.</p>
 
-<h3>What's with Outer Dot?</h3>
+<h4>What's with Outer Dot?</h4>
 <p>
- honestly, I don't know what it means, it's a random name picked up from: <a href="http://namethingy.com">namethingy.com</a>   
+Well, I don't know what it means (yet), it's a random name picked up from: <a href="http://namethingy.com">namethingy.com</a><br>  
+Logo was created by the free <a href="http://www.logomaker.com">logomaker.com</a>
 </p>
+
+<h4>Other credits</h4>
+Monokai CSS from <a href="https://gist.github.com/tobalgists/4007977">this gist by tobalgists</a>
+<br>
+(And of course Jekyll Bootstrap and Twitter Bootstrap)
+
+<h4>Some links</h4>
+
+Always wanted to put this somewhere (not really):
+<br>
+<a href="http://stackexchange.com/users/85878">
+<img src="http://stackexchange.com/users/flair/85878.png" width="208" height="58" alt="profile for Eran Medan on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Eran Medan on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+</a>
+
+<br>
+And this 
+<br>
+<iframe src="http://ghbtns.com/github-btn.html?user=eranation&type=follow"
+  allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+<br>
+{% include custom/followme %}
+
+<br>
+Some other links...
+<br>
+<a href="http://www.linkedin.com/in/eranmedan">Linked In</a>
+<br>
+<a href="https://medium.com/@eranation">Medium</a>
 
 
