page ordering, favicon

--- a/0_about.html
+++ b/0_about.html
@@ -4,6 +4,7 @@ title: About
 description: "Some details about me"
 #tagline: a blog about code
 group: navigation
+permalink: "about.html"
 ---
 {% include JB/setup %}
 
