--- a/2_categories.html
+++ b/2_categories.html
@@ -3,6 +3,8 @@ layout: page
 title: Categories
 header: Posts By Category
 group: navigation
+permalink: "categories.html"
+
 ---
 {% include JB/setup %}
 
