change to scalatutorials.com

--- a/0_about.html
+++ b/0_about.html
@@ -11,15 +11,15 @@ permalink: "about.html"
 
 <h4>Who am I</h4>
 
-<p>I'm a software engineer who loves to code and build things, experiment with new technologies, and always deepen my learning with existing ones.</p>
+<p>I'm a software engineer / developer / hacker / programmer whoever you want to call it who loves to code and build things, experiment with new technologies, and always deepen my learning with existing ones.</p>
 
 <h4>Why blog?</h4>
 <p>People (friends colleagues and wife) were tired of me talking about technology all the time, I decided to direct this into a blog, and here is the result.</p>
 
-<h4>What's with Outer Dot?</h4>
+<h4>What's with the logo?</h4>
 <p>
-Well, I don't know what it means (yet), it's a random name picked up from: <a href="http://namethingy.com">namethingy.com</a><br>  
-Logo was created by the free <a href="http://www.logomaker.com">logomaker.com</a>
+<!--Well, I don't know what it means (yet), it's a random name picked up from: <a href="http://namethingy.com">namethingy.com</a><br>  -->
+Not sure yet, but it was created by the free <a href="http://www.logomaker.com">logomaker.com</a>
 </p>
 
 <h4>Other credits</h4>
@@ -28,8 +28,8 @@ Monokai CSS from <a href="https://gist.github.com/tobalgists/4007977">this gist 
 (And of course Jekyll Bootstrap and Twitter Bootstrap)
 
 <h4>Some links</h4>
-
-Always wanted to put this somewhere (not really):
+<!--
+Always wanted to put this somewhere:
 <br>
 <a href="http://stackexchange.com/users/85878">
 <img src="http://stackexchange.com/users/flair/85878.png" width="208" height="58" alt="profile for Eran Medan on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Eran Medan on Stack Exchange, a network of free, community-driven Q&amp;A sites">
@@ -38,13 +38,12 @@ Always wanted to put this somewhere (not really):
 <br>
 And this 
 <br>
+-->
 <iframe src="http://ghbtns.com/github-btn.html?user=eranation&type=follow"
   allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
 <br>
 {% include custom/followme %}
 
-<br>
-Some other links...
 <br>
 <a href="http://www.linkedin.com/in/eranmedan">Linked In</a>
 <br>
