--- a/0_about.html
+++ b/0_about.html
@@ -10,7 +10,7 @@ permalink: "about.html"
 
 <h4>Who am I</h4>
 
-<p>I'm a software engineer / developer / hacker / programmer whoever you want to call it who loves to code and build things, experiment with new technologies, and always deepen my learning with existing ones.</p>
+<p>I'm a software engineer / developer / hacker / programmer (or however you want to call it) who loves to code and build things, experiment with new technologies, and always deepen my learning with existing ones.</p>
 
 
 <h4>What's with the logo?</h4>
