update bootstrap + added links

--- a/0_about.html
+++ b/0_about.html
@@ -3,7 +3,7 @@ layout: page
 title: About
 description: "Some details about me"
 #tagline: a blog about code
-group: navigation
+group: other
 permalink: "about.html"
 ---
 {% include JB/setup %}
@@ -36,7 +36,7 @@ Always wanted to put this somewhere:
 And this 
 <br>
 -->
-<iframe src="http://ghbtns.com/github-btn.html?user=eranation&type=follow"
+<iframe src="http://ghbtns.com/github-btn.html?user=scalatutorials&type=follow"
   allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
 <br>
 {% include custom/followme %}
