--- a/tour/00_toc.html
+++ b/tour/00_toc.html
@@ -9,25 +9,31 @@ permalink: "toc.html"
 {% include JB/setup %}
 
 <ol>
-  <li><a href="{{ BASE_PATH }}01_tour_of_scala_scalculator.html" class="active">Scalculator</a></li>
-  <li><a href="{{ BASE_PATH }}02_tour_of_scala_operators_are_methods.html" class="active">Operators are methods</a></li>
-  <li><a href="{{ BASE_PATH }}03_tour_of_scala_variables.html" class="active">Variables</a></li>
-  <li><a href="{{ BASE_PATH }}04_tour_of_scala_final_variables.html" class="active">Final Variables</a></li>
-  <li><a href="{{ BASE_PATH }}05_tour_of_scala_printing_values.html" class="active">Printing values</a></li>
-  <li><a href="{{ BASE_PATH }}06_tour_of_scala_string_interpolation.html" class="active">String interpolation</a></li>
-  <li><a href="{{ BASE_PATH }}07_tour_of_scala_string_formatting.html" class="active">String formatting</a></li>
-  <li><a href="{{ BASE_PATH }}08_tour_of_scala_method_definition.html" class="active">Method definition</a></li>
-  <li><a href="{{ BASE_PATH }}09_tour_of_scala_method_definition_2.html" class="active">Method definition 2</a></li>
-  <li><a href="{{ BASE_PATH }}10_tour_of_scala_method_definition_3.html" class="active">Method definition 3</a></li>
-  <li><a href="{{ BASE_PATH }}11_tour_of_scala_anonymous_functions.html" class="active">Anonymous Functions</a></li>
-  <li><a href="{{ BASE_PATH }}12_tour_of_scala_anonymous_functions_2.html" class="active">Anonymous Functions 2</a></li>
-  <li><a href="{{ BASE_PATH }}13_tour_of_scala_return_multiple_variables.html" class="active">Return multiple variables</a></li>
-  <li><a href="{{ BASE_PATH }}14_tour_of_scala_declare_multiple_variables.html" class="active">Declare multiple variables</a></li>
-  <li><a href="{{ BASE_PATH }}15_tour_of_scala_assign_multiple_variables.html" class="active">Assign multiple variables</a></li>
-  <li><a href="{{ BASE_PATH }}16_tour_of_scala_loops_using_while.html" class="active">Loops using while</a></li>
-  <li><a href="{{ BASE_PATH }}17_tour_of_scala_loops_using_for.html" class="active">Loops using for</a></li>
-  <li><a href="{{ BASE_PATH }}18_tour_of_scala_loops_without_loops.html" class="active">Loops without loops</a></li>
-  <li><a href="{{ BASE_PATH }}19_tour_of_scala_conditions.html" class="active">Conditions</a></li>
-  <li><a href="{{ BASE_PATH }}20_tour_of_scala_basic_pattern_matching.html" class="active">Basic Pattern Matching</a></li>
-  <li><a href="{{ BASE_PATH }}21_tour_of_scala_lists.html" class="active">Lists</a></li>
+  <li><a href="{{ BASE_PATH }}01_tour_of_scala_scalculator.html" class="active">Scalculator</a> <span>Expressions</span></li>
+  <li><a href="{{ BASE_PATH }}02_tour_of_scala_operators_are_methods.html" class="active">Operators are methods</a> <span>Types</span></li>
+  <li><a href="{{ BASE_PATH }}03_tour_of_scala_variables.html" class="active">Variables</a> <span>Variables</span></li>
+  <li><a href="{{ BASE_PATH }}04_tour_of_scala_final_variables.html" class="active">Final Variables</a> <span>Variables</span></li>
+  <li><a href="{{ BASE_PATH }}05_tour_of_scala_printing_values.html" class="active">Printing values</a> <span>IO</span></li>
+  <li><a href="{{ BASE_PATH }}06_tour_of_scala_string_interpolation.html" class="active">String interpolation</a> <span>Strings</span></li>
+  <li><a href="{{ BASE_PATH }}07_tour_of_scala_string_formatting.html" class="active">String formatting</a> <span>Strings</span></li>
+  <li><a href="{{ BASE_PATH }}08_tour_of_scala_method_definition.html" class="active">Method definition</a> <span>Methods</span></li>
+  <li><a href="{{ BASE_PATH }}09_tour_of_scala_method_definition_2.html" class="active">Method definition 2</a> <span>Methods</span></li>
+  <li><a href="{{ BASE_PATH }}10_tour_of_scala_method_definition_3.html" class="active">Method definition 3</a> <span>Methods</span></li>
+  <li><a href="{{ BASE_PATH }}11_tour_of_scala_anonymous_functions.html" class="active">Anonymous Functions</a> <span>Functions</span></li>
+  <li><a href="{{ BASE_PATH }}12_tour_of_scala_anonymous_functions_2.html" class="active">Anonymous Functions 2</a> <span>Functions</span></li>
+  <li><a href="{{ BASE_PATH }}13_tour_of_scala_return_multiple_variables.html" class="active">Return multiple variables</a> <span>Variables</span></li>
+  <li><a href="{{ BASE_PATH }}14_tour_of_scala_declare_multiple_variables.html" class="active">Declare multiple variables</a> <span>Variables</span></li>
+  <li><a href="{{ BASE_PATH }}15_tour_of_scala_assign_multiple_variables.html" class="active">Assign multiple variables</a> <span>Variables</span></li>
+  <li><a href="{{ BASE_PATH }}16_tour_of_scala_loops_using_while.html" class="active">Loops using while</a> <span>Loops</span></li>
+  <li><a href="{{ BASE_PATH }}17_tour_of_scala_loops_using_for.html" class="active">Loops using for</a> <span>Loops</span></li>
+  <li><a href="{{ BASE_PATH }}18_tour_of_scala_loops_without_loops.html" class="active">Loops without loops</a> <span>Loops</span></li>
+  <li><a href="{{ BASE_PATH }}19_tour_of_scala_if.html" class="active">If</a> <span>Conditions</span></li>
+  <li><a href="{{ BASE_PATH }}20_tour_of_scala_match_as_a_switch.html" class="active">Match as a Switch</a> <span>Conditions</span></li>
+  <li><a href="{{ BASE_PATH }}21_tour_of_scala_arrays.html" class="active">Arrays</a> <span>Collections</span></li>
+  <li><a href="{{ BASE_PATH }}22_tour_of_scala_lists.html" class="active">Lists</a> <span>Collections</span></li>
+  <li><a href="{{ BASE_PATH }}23_tour_of_scala_sets.html" class="active">Sets</a> <span>Collections</span></li>
+  <li><a href="{{ BASE_PATH }}24_tour_of_scala_maps.html" class="active">Maps</a> <span>Collections</span></li>
+  <li><a href="{{ BASE_PATH }}25_tour_of_scala_collections__accessing_elements.html" class="active">Collections - Accessing Elements</a> <span>Collections</span></li>
+  <li><a href="{{ BASE_PATH }}26_tour_of_scala_collections__concatenation.html" class="active">Collections - Concatenation</a> <span>Collections</span></li>
+  <li><a href="{{ BASE_PATH }}27_tour_of_scala_want_more.html" class="active">Want more?</a> <span>General</span></li>
 <ol>
