work in progress

--- a/tour/00_toc.html
+++ b/tour/00_toc.html
@@ -35,5 +35,5 @@ permalink: "toc.html"
   <li><a href="{{ BASE_PATH }}24_tour_of_scala_maps.html" class="active">Maps</a> <span>Collections</span></li>
   <li><a href="{{ BASE_PATH }}25_tour_of_scala_collections__accessing_elements.html" class="active">Collections - Accessing Elements</a> <span>Collections</span></li>
   <li><a href="{{ BASE_PATH }}26_tour_of_scala_collections__concatenation.html" class="active">Collections - Concatenation</a> <span>Collections</span></li>
-  <li><a href="{{ BASE_PATH }}27_tour_of_scala_want_more.html" class="active">Want more?</a> <span>General</span></li>
+  <li><a href="{{ BASE_PATH }}27_tour_of_scala_work_in_progress.html" class="active">Work in progress...</a> <span>General</span></li>
 <ol>
