new home page, responsive support

--- a/0_about.html
+++ b/0_about.html
@@ -3,47 +3,48 @@ layout: page
 title: About
 description: "Some details about me"
 #tagline: a blog about code
-group: other
+group: navigation
 permalink: "about.html"
 ---
 {% include JB/setup %}
 
-<h4>Who am I</h4>
-
-<p>I'm a software engineer / developer / hacker / programmer (or however you want to call it) who loves to code and build things, experiment with new technologies, and always deepen my learning with existing ones.</p>
-
-
-<h4>What's with the logo?</h4>
-<p>
-<!--Well, I don't know what it means (yet), it's a random name picked up from: <a href="http://namethingy.com">namethingy.com</a><br>  -->
-Not sure yet, but it was created by the free <a href="http://www.logomaker.com">logomaker.com</a>
-</p>
-
-<h4>Other credits</h4>
+Code editor is using <a href="http://scalakata.com" target="_blank">Scalakata.com</a> written by <a href="https://github.com/MasseGuillaume" target="_blank">Guillaume Massé</a>
+<br>
+<br>
+Site and content by <a href="https://github.com/eranation" target="_blank">Eran Medan</a> 
+<br>
+<br>
 Monokai CSS from <a href="https://gist.github.com/tobalgists/4007977">this gist by tobalgists</a>
 <br>
-(And of course Jekyll Bootstrap and Twitter Bootstrap)
-
-<h4>Some links</h4>
-<!--
-Always wanted to put this somewhere:
 <br>
-<a href="http://stackexchange.com/users/85878">
-<img src="http://stackexchange.com/users/flair/85878.png" width="208" height="58" alt="profile for Eran Medan on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Eran Medan on Stack Exchange, a network of free, community-driven Q&amp;A sites">
-</a>
+Using Jekyll Bootstrap, Twitter Bootstrap, jQuery and Codemirror
+<br>
+<br>
+Home page image from <a href="http://placeit.breezi.com/">PlaceIt by Breezi</a>
 
 <br>
-And this 
 <br>
--->
+Scala Logo Font: <a href="http://mfizz.com/oss/font-mfizz/icon-scala">font-mfizz</a>
+<br>
+<br>
+Scala logo is owned by École Polytechnique Fédérale de Lausanne (EPFL) for the Scala programming language.
+<br>
+<br>
+Not affiliated or endorsed by EPFL or TypeSafe. 
+<br>
+<br>
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Scala Tutorials</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>
+<br>
+<br>
 <iframe src="http://ghbtns.com/github-btn.html?user=scalatutorials&type=follow"
-  allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="152" height="20"></iframe>
 <br>
 {% include custom/followme %}
 
-<br>
-<a href="http://www.linkedin.com/in/eranmedan">Linked In</a>
-<br>
-<a href="https://medium.com/@eranation">Medium</a>
-
+<h4>Alternatives</h4>
+<ul>
+	<li><a href="http://www.scala-tour.com/">Scala Tour</a></li>
+	<li><a href="http://www.simplyscala.com">Simply Scala</a></li>
+	<li><a href="http://www.tryscala.com/">Try Scala</a></li>
+</ul>
 
