--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
     @media (max-width: 980px) { 
       .sitelogo {
         position: static !important;
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 0 !important;;
+        margin-right: 0 !important;;
+
       }
       .signup-form {
         width: auto !important;
