--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Scala Tutorials</title>
-  <meta name="description" content="Guides and tutorials for the Scala programming language. Including a live in-browser starting with scala tutorial">
+  <meta name="description" content="Guides and tutorials for the Scala programming language. Including a live in browser starting with scala tutorial">
   <meta name="author" content="Eran Medan">
   <!-- Enable responsive viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
