--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .splash {
       text-align: center;
       /* background-image: url(http://s3.amazonaws.com/place-it/public/uploads/productshot/775969/breezi_placeit.png); */
-      background-image: url(/assets/themes/twitter/bootstrap/img/scala_tutorials_screenshot.png);
+      background-image: url(/assets/themes/twitter/bootstrap/img/scala_tutorials_screenshot.jpg);
       
       background-position: 50% 20%;
       background-size: cover;
@@ -75,14 +75,14 @@
       }
 
       .splash {
-        background-image: url(/assets/themes/twitter/bootstrap/img/scala_tutorials_screenshot_mobile.png) !important;
+        background-image: url(/assets/themes/twitter/bootstrap/img/scala_tutorials_screenshot_mobile.jpg) !important;
       }
     }
 
     @media (max-width: 767px) and (min-width: 481px) {
 
       .splash {
-        background-image: url(/assets/themes/twitter/bootstrap/img/scala_tutorials_screenshot_tablet.png) !important;
+        background-image: url(/assets/themes/twitter/bootstrap/img/scala_tutorials_screenshot_tablet.jpg) !important;
       }
 
       
