added share buttons

--- a/homepage_editor.html
+++ b/homepage_editor.html
@@ -86,7 +86,7 @@
       <form class="kata-form" action="http://www.scalakata.com/api/scala" target="_blank" method="post">
         <div class="kata-code-wrap">
           <textarea autofocus="" name="code" class="kata-code" style="display:none">
-//Press the green button
+//Press the green button below to run!
 println("Hello World!")
 
 //Simply type and run
