--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
 
     }
     @media (max-width: 1199px) { 
-
+      #video {
+        display: none;
+      }
       .signup-form {
         border-radius: 0 0 10px 10px ;
         width: 40%;
@@ -281,6 +283,7 @@
 
     @media (min-width: 1200px) { 
       #video {
+        display: block;
         position: absolute;
         left: 20%;
         right: 45.8%;
