some tweaks on home page

--- a/index.html
+++ b/index.html
@@ -391,11 +391,11 @@
 
         </style>  
         <div id="mc_embed_signup" style="back">
+            <div class="" style="margin: 10px auto;"><br>Start the <a class="btn btn-danger btn-large btn-lg" href="/tour">Basic Scala Tutorial</a><br/><small>* no sign up or download needed, runs in your browser, 100% free</small></div>
           <form class="form-inline" action="http://scalatutorials.us4.list-manage2.com/subscribe/post?u=88bb0ae2c547a703dfa7bb4df&amp;id=89b98532cc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="" target="_blank" novalidate>
-            <label for="mce-EMAIL">Sign up to to be notified when the site launches!</label>
+            <label for="mce-EMAIL">Sign up to to be notified when more tutorials are available</label>
             <input type="email" value="" name="EMAIL" class="email" style="display:inline-block" id="mce-EMAIL" placeholder="email address" required>
             <input type="submit" style="display:inline-block" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-large btn-lg">
-            <div class="" style="margin: 10px auto;"><br>In the meantime you can try the <a class="btn btn-danger btn-large btn-lg" href="/tour">Basic Scala Tutorial</a><br/><!-- <small>* no sign up or download needed, runs in your browser, 100% free</small> --></div>
             <div id="tweet"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://scalatutorials.com" data-text="Scala Tutorials" data-via="ScalaTutorials" data-related="scalatutorials" data-hashtags="scala">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
