--- a/tour/00_toc.html
+++ b/tour/00_toc.html
@@ -17,6 +17,7 @@ permalink: "toc.html"
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_printing_values.html" class="active">Printing values</a> <span>IO</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_string_interpolation.html" class="active">String interpolation</a> <span>Strings</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_string_formatting.html" class="active">String formatting</a> <span>Strings</span></li>
+  <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_useful_operations.html" class="active">Useful operations</a> <span></span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_method_definition.html" class="active">Method definition</a> <span>Methods</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_method_definition_2.html" class="active">Method definition 2</a> <span>Methods</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_method_definition_3.html" class="active">Method definition 3</a> <span>Methods</span></li>
@@ -35,9 +36,8 @@ permalink: "toc.html"
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_sets.html" class="active">Sets</a> <span>Collections</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_maps.html" class="active">Maps</a> <span>Collections</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_mutable_collections.html" class="active">Mutable Collections</a> <span></span></li>
-  <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_collections__accessing_elements.html" class="active">Collections - Accessing Elements</a> <span>Collections</span></li>
-  <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_collections__concatenation.html" class="active">Collections - Concatenation</a> <span>Collections</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_mutable_collections_operations.html" class="active">Mutable Collections Operations</a> <span>Collections</span></li>
   <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_immutable_collections_with_var.html" class="active">Immutable collections with var</a> <span>Collections</span></li>
-  <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_work_in_progress.html" class="active">Work in progress...</a> <span>General</span></li>
+  <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_classes.html" class="active">Classes</a> <span></span></li>
+  <li><a href="{{ BASE_PATH }}interactive_tour_of_scala_classes__continued.html" class="active">Classes - continued</a> <span></span></li>
 <ol>
