--- a/homepage_editor.html
+++ b/homepage_editor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>A Tour of Scala - an interactive scala tutorial - Scalculator</title> 
+  <title>A Tour of Scala - an interactive scala tutorial - Scalculator</title>
 
   <meta name="description" content="Interactive Scala Tutorial">
   <meta name="author" content="Eran Medan">
@@ -43,7 +43,7 @@
     .cm-s-monokai.CodeMirror-scroll {
       background-color: black !important;
       color: white !important;
-    } 
+    }
     #workspace {
       position: absolute;
       top: 0;
@@ -91,8 +91,8 @@ println("Hello World!")
 
 //Simply type and run
 //e.g. project Euler prblem #1:
-(1 until 1000).filter(x => 
-  x % 3 == 0 || x % 5 == 0).sum
+println((1 until 1000).filter(x =>
+  x % 3 == 0 || x % 5 == 0).sum)
 </textarea>
           <div id="controls">
             <button value="Expand" type="button" onclick="top.expand(this);" id="expand" name="expand" class="btn  btn-small"> <i class="icon-resize-full"></i> <span class="expand-text">Expand</span>
