--- a/0_about.html
+++ b/0_about.html
@@ -8,7 +8,7 @@ permalink: "about.html"
 ---
 {% include JB/setup %}
 
-Code editor is using <a href="http://scalakata.com" target="_blank">Scalakata.com</a> written by <a href="https://github.com/MasseGuillaume" target="_blank">Guillaume Massé</a>
+Code evaluation engine is using <a href="http://codebrew.io" target="_blank">Codebrew.io</a>. Check it out!
 <br>
 <br>
 Site and content by <a href="https://github.com/eranation" target="_blank">Eran Medan</a> 
