--- a/0_about.html
+++ b/0_about.html
@@ -8,7 +8,15 @@ permalink: "about.html"
 ---
 {% include JB/setup %}
 
-Code evaluation engine is using <a href="http://codebrew.io" target="_blank">Codebrew.io</a>. Check it out!
+Code evaluation engine is using <a href="http://codebrew.io" target="_blank">Codebrew.io</a> 
+(Made by 
+<a href="https://github.com/MasseGuillaume" target="_blank">Guillaume Masse</a>, 
+<a href="https://github.com/jedesah" target="_blank">Jean-Remi Desjardins</a>, 
+<a href="https://github.com/shmed" target="_blank">Raouf Merouche</a>, 
+<a href="https://github.com/manbear" target="_blank">Eric Comte Marois</a> and 
+<a href="https://github.com/patlos" target="_blank">Patrick Losier</a>) 
+- Check it out!
+
 <br>
 <br>
 Site and content by <a href="https://github.com/eranation" target="_blank">Eran Medan</a> 
