--- a/homepage_editor.html
+++ b/homepage_editor.html
@@ -87,12 +87,9 @@
         <div class="kata-code-wrap">
           <textarea autofocus="" name="code" class="kata-code" style="display:none">
 //Press the green button below to run!
-println("Hello World!")
-
-//Simply type and run
 //e.g. project Euler prblem #1:
-println((1 until 1000).filter(x =>
-  x % 3 == 0 || x % 5 == 0).sum)
+(1 until 1000).filter(x =>
+  x % 3 == 0 || x % 5 == 0).sum
 </textarea>
           <div id="controls">
             <button value="Expand" type="button" onclick="top.expand(this);" id="expand" name="expand" class="btn  btn-small"> <i class="icon-resize-full"></i> <span class="expand-text">Expand</span>
