--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
         </style>
         <div id="mc_embed_signup" style="back">
-            <div class="" style="margin: 10px auto;"><br>Start the <a class="btn btn-danger btn-large btn-lg" href="/tour">Basic Scala Tutorial</a><br/><small><!--NOTE: We are working on fixing the "live run" of scala code, our appologies for the inconvenience--></small></div>
+            <div class="" style="margin: 10px auto;"><br>Start the <a class="btn btn-danger btn-large btn-lg" href="/tour">Basic Scala Tutorial</a><br/><small>NOTE: We are working on fixing the "live run" of scala code, our appologies for the inconvenience</small></div>
           <form class="form-inline" action="http://scalatutorials.us4.list-manage2.com/subscribe/post?u=88bb0ae2c547a703dfa7bb4df&amp;id=89b98532cc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="" target="_blank" novalidate>
             <label for="mce-EMAIL">Sign up to to be notified when more tutorials are available</label>
             <input type="email" value="" name="EMAIL" class="email" style="display:inline-block" id="mce-EMAIL" placeholder="email address" required>
